--- a/lab3/hw3.Rmd
+++ b/lab3/hw3.Rmd
@@ -55,31 +55,33 @@ mountains <- tibble(name, height_feet, height_meters, first_climbed, summits)
 
 **6. Which mountain has the highest number of fatalities? Make a new vector `fatalities` and add it to the `mountains` data frame.**
 ```{r}
-
+fatalities <- c(340, 96, 50, 22, 50)
 ```
+
+```{r}
+mountains <- tibble(name, height_feet, height_meters, first_climbed, summits, fatalities)
+```
+
 
 **7. What is the fatality rate (i.e., fatalities divided by summits) for each mountain? Create a new vector `fatality_rate` and add it to the `mountains` data frame.**
 ```{r}
-
+fatality_rate <- (mountains$fatalities/mountains$summits)
+mountains <- tibble(name, height_feet, height_meters, first_climbed, summits, fatalities, fatality_rate)
 ```
 
 **8. Write your data frame to a .csv file called `mountains_data`.**
 ```{r}
-
+write.csv(mountains, "mountains_data.csv", row.names = FALSE)
 ```
 
 **9. Clear your environment panel by clicking on the broom icon. Then read in your `mountains_data.csv` file to a new object called `mountains`.**
 ```{r}
-
-```
-
-```{r}
-
+mountains <- read.csv("mountains_data.csv")
 ```
 
 **10. Use a summary function of your choice to show the structure of your `mountains` data frame.**
 ```{r}
-
+glimpse(mountains)
 ```
 
 ## Knit and Upload
