--- a/lab6/hw6.Rmd
+++ b/lab6/hw6.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 6"
-author: "Your Name Here"
+author: "Jhanani Ramkumar"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -23,26 +23,28 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 **1. Load `IvindoData_DryadVersion.csv` and store it as a new object called `gabon`.**
 ```{r}
-
+gabon <- read_csv("data/IvindoData_DryadVersion.csv")
 ```
 
 **2. Use one or more of the summary functions you have learned to get an idea of the structure of the data.**  
 ```{r}
-
+glimpse(gabon)
 ```
 
 **3. Clean the data as necessary following the conventions from lab 6.**
 ```{r}
-
+gabon <- gabon %>% 
+  clean_names()
 ```
 
 ```{r}
-
+glimpse(gabon)
 ```
 
 **4. Use `mutate()` Change the variables `HuntCat`, `LandUse`, and `TransectID` to factors. Be sure to store the output as a new dataframe and use it for the remaining questions.**
 ```{r}
-
+gabon <- gabon %>% 
+  mutate(across(c(hunt_cat, land_use, transect_id), ))
 ```
 
 **5. Make a plot that shows the number of transects for each land use type.**
@@ -50,9 +52,6 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 ```
 
-```{r}
-
-```
 
 **6. How does vegetation richness compare among land use types?**
 ```{r}
@@ -64,17 +63,6 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 ```
 
-```{r}
-
-```
-
-```{r}
-
-```
-
-```{r}
-
-```
 
 **8. Is there a relationship between vegetation richness and mammal species richness?**
 ```{r}
@@ -86,9 +74,6 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 ```
 
-```{r}
-
-```
 
 **10.Which transects and land use types have more than 10 tree species and 10 mammal species? Use `arrange()` to sort by the number of tree species.**
 ```{r}
